turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: '(' expected but identifier found.
    if colors(i) == couleur {
       ^LangtonsAnt:19: error: illegal start of simple expression
  }
  ^